--- a/Modulo2_Actividad4.ipynb
+++ b/Modulo2_Actividad4.ipynb
@@ -1940,6 +1940,93 @@
     "print('Los productos outlier en el df_productos son:')\n",
     "print(productos_outliers)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d4d9db1e",
+   "metadata": {},
+   "source": [
+    "**2. El archivo “M3E4 - titanic.csv” contiene información sobre los pasajeros del Titanic. Escribir un programa con los siguientes requisitos:**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "578be7d3",
+   "metadata": {},
+   "source": [
+    "*a. Generar un DataFrame con los datos del fichero*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "23db8733",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                           PassengerId  Survived  Pclass  \\\n",
+      "0    1,0,3,Braund, Mr. Owen Harris,male,22,1,0,A/5 ...       NaN     NaN   \n",
+      "1    2,1,1,Cumings, Mrs. John Bradley (Florence Bri...       NaN     NaN   \n",
+      "2    3,1,3,Heikkinen, Miss. Laina,female,26,0,0,STO...       NaN     NaN   \n",
+      "3    4,1,1,Futrelle, Mrs. Jacques Heath (Lily May P...       NaN     NaN   \n",
+      "4    5,0,3,Allen, Mr. William Henry,male,35,0,0,373...       NaN     NaN   \n",
+      "..                                                 ...       ...     ...   \n",
+      "886  887,0,2,Montvila, Rev. Juozas,male,27,0,0,2115...       NaN     NaN   \n",
+      "887  888,1,1,Graham, Miss. Margaret Edith,female,19...       NaN     NaN   \n",
+      "888  889,0,3,Johnston, Miss. Catherine Helen Carrie...       NaN     NaN   \n",
+      "889  890,1,1,Behr, Mr. Karl Howell,male,26,0,0,1113...       NaN     NaN   \n",
+      "890  891,0,3,Dooley, Mr. Patrick,male,32,0,0,370376...       NaN     NaN   \n",
+      "\n",
+      "     Name  Sex  Age  SibSp  Parch  Ticket  Fare  Cabin  Embarked  \n",
+      "0     NaN  NaN  NaN    NaN    NaN     NaN   NaN    NaN       NaN  \n",
+      "1     NaN  NaN  NaN    NaN    NaN     NaN   NaN    NaN       NaN  \n",
+      "2     NaN  NaN  NaN    NaN    NaN     NaN   NaN    NaN       NaN  \n",
+      "3     NaN  NaN  NaN    NaN    NaN     NaN   NaN    NaN       NaN  \n",
+      "4     NaN  NaN  NaN    NaN    NaN     NaN   NaN    NaN       NaN  \n",
+      "..    ...  ...  ...    ...    ...     ...   ...    ...       ...  \n",
+      "886   NaN  NaN  NaN    NaN    NaN     NaN   NaN    NaN       NaN  \n",
+      "887   NaN  NaN  NaN    NaN    NaN     NaN   NaN    NaN       NaN  \n",
+      "888   NaN  NaN  NaN    NaN    NaN     NaN   NaN    NaN       NaN  \n",
+      "889   NaN  NaN  NaN    NaN    NaN     NaN   NaN    NaN       NaN  \n",
+      "890   NaN  NaN  NaN    NaN    NaN     NaN   NaN    NaN       NaN  \n",
+      "\n",
+      "[891 rows x 12 columns]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\fjib2\\AppData\\Local\\Temp\\ipykernel_6448\\1059531919.py:6: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
+      "  titanic = titanic.applymap(lambda x: x.replace('\"', '') if isinstance(x, str) else x)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Importamos librería pandas\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Cargamos los datos del archivo titanic.csv y lo convertimos a un dataFrame\n",
+    "titanic = pd.read_csv('titanic.csv', delimiter=',', encoding='latin1')\n",
+    "titanic = titanic.applymap(lambda x: x.replace('\"', '') if isinstance(x, str) else x)\n",
+    "print(titanic)\n",
+    "\n",
+    "\n",
+    "\n",
+    "#df_titanic = pd.DataFrame(titanic)\n",
+    "\n",
+    "#df_titanic\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b40e11af",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
