--- a/Modulo2_Actividad4.ipynb
+++ b/Modulo2_Actividad4.ipynb
@@ -1959,7 +1959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 1,
    "id": "23db8733",
    "metadata": {},
    "outputs": [
@@ -1967,41 +1967,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                                           PassengerId  Survived  Pclass  \\\n",
-      "0    1,0,3,Braund, Mr. Owen Harris,male,22,1,0,A/5 ...       NaN     NaN   \n",
-      "1    2,1,1,Cumings, Mrs. John Bradley (Florence Bri...       NaN     NaN   \n",
-      "2    3,1,3,Heikkinen, Miss. Laina,female,26,0,0,STO...       NaN     NaN   \n",
-      "3    4,1,1,Futrelle, Mrs. Jacques Heath (Lily May P...       NaN     NaN   \n",
-      "4    5,0,3,Allen, Mr. William Henry,male,35,0,0,373...       NaN     NaN   \n",
-      "..                                                 ...       ...     ...   \n",
-      "886  887,0,2,Montvila, Rev. Juozas,male,27,0,0,2115...       NaN     NaN   \n",
-      "887  888,1,1,Graham, Miss. Margaret Edith,female,19...       NaN     NaN   \n",
-      "888  889,0,3,Johnston, Miss. Catherine Helen Carrie...       NaN     NaN   \n",
-      "889  890,1,1,Behr, Mr. Karl Howell,male,26,0,0,1113...       NaN     NaN   \n",
-      "890  891,0,3,Dooley, Mr. Patrick,male,32,0,0,370376...       NaN     NaN   \n",
+      "     PassengerId  Survived  Pclass  \\\n",
+      "0              1         0       3   \n",
+      "1              2         1       1   \n",
+      "2              3         1       3   \n",
+      "3              4         1       1   \n",
+      "4              5         0       3   \n",
+      "..           ...       ...     ...   \n",
+      "886          887         0       2   \n",
+      "887          888         1       1   \n",
+      "888          889         0       3   \n",
+      "889          890         1       1   \n",
+      "890          891         0       3   \n",
       "\n",
-      "     Name  Sex  Age  SibSp  Parch  Ticket  Fare  Cabin  Embarked  \n",
-      "0     NaN  NaN  NaN    NaN    NaN     NaN   NaN    NaN       NaN  \n",
-      "1     NaN  NaN  NaN    NaN    NaN     NaN   NaN    NaN       NaN  \n",
-      "2     NaN  NaN  NaN    NaN    NaN     NaN   NaN    NaN       NaN  \n",
-      "3     NaN  NaN  NaN    NaN    NaN     NaN   NaN    NaN       NaN  \n",
-      "4     NaN  NaN  NaN    NaN    NaN     NaN   NaN    NaN       NaN  \n",
-      "..    ...  ...  ...    ...    ...     ...   ...    ...       ...  \n",
-      "886   NaN  NaN  NaN    NaN    NaN     NaN   NaN    NaN       NaN  \n",
-      "887   NaN  NaN  NaN    NaN    NaN     NaN   NaN    NaN       NaN  \n",
-      "888   NaN  NaN  NaN    NaN    NaN     NaN   NaN    NaN       NaN  \n",
-      "889   NaN  NaN  NaN    NaN    NaN     NaN   NaN    NaN       NaN  \n",
-      "890   NaN  NaN  NaN    NaN    NaN     NaN   NaN    NaN       NaN  \n",
+      "                                                  Name     Sex   Age  SibSp  \\\n",
+      "0                              Braund, Mr. Owen Harris    male  22.0      1   \n",
+      "1    Cumings, Mrs. John Bradley (Florence Briggs Th...  female  38.0      1   \n",
+      "2                               Heikkinen, Miss. Laina  female  26.0      0   \n",
+      "3         Futrelle, Mrs. Jacques Heath (Lily May Peel)  female  35.0      1   \n",
+      "4                             Allen, Mr. William Henry    male  35.0      0   \n",
+      "..                                                 ...     ...   ...    ...   \n",
+      "886                              Montvila, Rev. Juozas    male  27.0      0   \n",
+      "887                       Graham, Miss. Margaret Edith  female  19.0      0   \n",
+      "888           Johnston, Miss. Catherine Helen \"Carrie\"  female   NaN      1   \n",
+      "889                              Behr, Mr. Karl Howell    male  26.0      0   \n",
+      "890                                Dooley, Mr. Patrick    male  32.0      0   \n",
+      "\n",
+      "     Parch            Ticket     Fare Cabin Embarked  \n",
+      "0        0         A/5 21171   7.2500   NaN        S  \n",
+      "1        0          PC 17599  71.2833   C85        C  \n",
+      "2        0  STON/O2. 3101282   7.9250   NaN        S  \n",
+      "3        0            113803  53.1000  C123        S  \n",
+      "4        0            373450   8.0500   NaN        S  \n",
+      "..     ...               ...      ...   ...      ...  \n",
+      "886      0            211536  13.0000   NaN        S  \n",
+      "887      0            112053  30.0000   B42        S  \n",
+      "888      2        W./C. 6607  23.4500   NaN        S  \n",
+      "889      0            111369  30.0000  C148        C  \n",
+      "890      0            370376   7.7500   NaN        Q  \n",
       "\n",
       "[891 rows x 12 columns]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\fjib2\\AppData\\Local\\Temp\\ipykernel_6448\\1059531919.py:6: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
-      "  titanic = titanic.applymap(lambda x: x.replace('\"', '') if isinstance(x, str) else x)\n"
      ]
     }
    ],
@@ -2010,16 +2015,11 @@
     "import pandas as pd\n",
     "\n",
     "# Cargamos los datos del archivo titanic.csv y lo convertimos a un dataFrame\n",
-    "titanic = pd.read_csv('titanic.csv', delimiter=',', encoding='latin1')\n",
-    "titanic = titanic.applymap(lambda x: x.replace('\"', '') if isinstance(x, str) else x)\n",
-    "print(titanic)\n",
+    "titanic = pd.read_csv('titanic.csv')\n",
+    "df_titanic = pd.DataFrame(titanic)\n",
     "\n",
     "\n",
-    "\n",
-    "#df_titanic = pd.DataFrame(titanic)\n",
-    "\n",
-    "#df_titanic\n",
-    "\n"
+    "df_titanic\n"
    ]
   },
   {
