--- a/Modulo2_Actividad4.ipynb
+++ b/Modulo2_Actividad4.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 56,
    "id": "f999cda7-528f-4424-b401-9ab3b24e0e78",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 57,
    "id": "6d079b0b-2a32-4778-ba52-5fb5bbbcbb9c",
    "metadata": {},
    "outputs": [
@@ -333,7 +333,7 @@
        "19       2003-11-03  955678902.0    nicolas@example.com  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 58,
    "id": "247de1f1",
    "metadata": {},
    "outputs": [
@@ -552,7 +552,7 @@
        "23      24  2023-11-09  23456789-1"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 59,
    "id": "4fd57583",
    "metadata": {},
    "outputs": [
@@ -883,7 +883,7 @@
        "39             24              119        20"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -895,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 60,
    "id": "4bc3451e",
    "metadata": {},
    "outputs": [
@@ -1074,7 +1074,7 @@
        "19     120            Helado    2500"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1094,7 +1094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 61,
    "id": "f56b3432",
    "metadata": {},
    "outputs": [
@@ -1128,7 +1128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 62,
    "id": "23f1b776",
    "metadata": {},
    "outputs": [
@@ -1159,7 +1159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 63,
    "id": "2dd80e0c",
    "metadata": {},
    "outputs": [
@@ -1193,7 +1193,7 @@
        "Name: nombre, dtype: object"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1222,7 +1222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 64,
    "id": "94bc2e95",
    "metadata": {},
    "outputs": [
@@ -1249,7 +1249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 65,
    "id": "e2bd0fc1",
    "metadata": {},
    "outputs": [
@@ -1555,7 +1555,7 @@
        "19       2003-11-03  955678902.0    nicolas@example.com     Falta Información  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1578,7 +1578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 66,
    "id": "021cf31a",
    "metadata": {},
    "outputs": [
@@ -1884,7 +1884,7 @@
        "19       2003-11-03  955678902.0    nicolas@example.com     Falta Información  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1910,7 +1910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 67,
    "id": "94f57828",
    "metadata": {},
    "outputs": [
@@ -1959,7 +1959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 68,
    "id": "23db8733",
    "metadata": {},
    "outputs": [
@@ -2212,7 +2212,7 @@
        "[891 rows x 12 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2239,7 +2239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 69,
    "id": "f5edae31",
    "metadata": {},
    "outputs": [
@@ -2300,7 +2300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 70,
    "id": "871bd359",
    "metadata": {},
    "outputs": [
@@ -2539,7 +2539,7 @@
        "9      0            237736  30.0708   NaN        C  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2551,7 +2551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 71,
    "id": "51a10c20",
    "metadata": {},
    "outputs": [
@@ -2778,7 +2778,7 @@
        "890    male  32.0      0      0            370376   7.7500   NaN        Q  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2798,7 +2798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 72,
    "id": "563f2e9e",
    "metadata": {},
    "outputs": [
@@ -2903,7 +2903,7 @@
        "Embarked                                            S"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2919,7 +2919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 73,
    "id": "23f04d58",
    "metadata": {},
    "outputs": [
@@ -2994,7 +2994,7 @@
        "147  9.0      2      2  W./C. 6608  34.375   NaN        S  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3018,7 +3018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 74,
    "id": "82f0f810",
    "metadata": {},
    "outputs": [
@@ -3279,7 +3279,7 @@
        "[446 rows x 12 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3295,7 +3295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 75,
    "id": "adae95f1",
    "metadata": {},
    "outputs": [
@@ -3556,7 +3556,7 @@
        "[445 rows x 12 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3580,7 +3580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 76,
    "id": "c0b200b5",
    "metadata": {},
    "outputs": [
@@ -3675,7 +3675,7 @@
        "[216 rows x 1 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3701,7 +3701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 77,
    "id": "3b3e8653",
    "metadata": {},
    "outputs": [
@@ -3736,7 +3736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 78,
    "id": "e979ea4d",
    "metadata": {},
    "outputs": [
@@ -3781,7 +3781,7 @@
        "      <td>62.96</td>\n",
        "      <td>37.04</td>\n",
        "      <td>15.26</td>\n",
-       "      <td>84.74</td>\n",
+       "      <td>8.98</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -3792,7 +3792,7 @@
        "      <td>47.28</td>\n",
        "      <td>52.72</td>\n",
        "      <td>9.76</td>\n",
-       "      <td>90.24</td>\n",
+       "      <td>10.89</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -3803,7 +3803,7 @@
        "      <td>24.24</td>\n",
        "      <td>75.76</td>\n",
        "      <td>13.36</td>\n",
-       "      <td>86.64</td>\n",
+       "      <td>41.75</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -3821,12 +3821,12 @@
        "2                        24.24                  75.76   \n",
        "\n",
        "   % Sobrevivieron sobre Total  % Muertos sobre Total  \n",
-       "0                        15.26                  84.74  \n",
-       "1                         9.76                  90.24  \n",
-       "2                        13.36                  86.64  "
+       "0                        15.26                   8.98  \n",
+       "1                         9.76                  10.89  \n",
+       "2                        13.36                  41.75  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3909,32 +3909,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "7c8cf96c",
+   "cell_type": "markdown",
+   "id": "f8053341",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "891\n"
-     ]
-    }
-   ],
    "source": [
-    "print(df_titanic.shape[0])\n"
+    "*h. Eliminar del DataFrame los pasajeros con edad desconocida*"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7fb9aa6",
+   "id": "ec77d753",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "\n"
    ]
   },
