--- a/Modulo2_Actividad4.ipynb
+++ b/Modulo2_Actividad4.ipynb
@@ -3918,7 +3918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 73,
    "id": "ec77d753",
    "metadata": {},
    "outputs": [
@@ -4171,7 +4171,7 @@
        "[714 rows x 12 columns]"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4191,279 +4191,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "id": "3c492f69",
+   "execution_count": 82,
+   "id": "d45c8192",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>PassengerId</th>\n",
-       "      <th>Survived</th>\n",
-       "      <th>Pclass</th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Sex</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>SibSp</th>\n",
-       "      <th>Parch</th>\n",
-       "      <th>Ticket</th>\n",
-       "      <th>Fare</th>\n",
-       "      <th>Cabin</th>\n",
-       "      <th>Embarked</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Cumings, Mrs. John Bradley (Florence Briggs Th...</td>\n",
-       "      <td>female</td>\n",
-       "      <td>38.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>PC 17599</td>\n",
-       "      <td>71.2833</td>\n",
-       "      <td>C85</td>\n",
-       "      <td>C</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Heikkinen, Miss. Laina</td>\n",
-       "      <td>female</td>\n",
-       "      <td>26.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>STON/O2. 3101282</td>\n",
-       "      <td>7.9250</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Futrelle, Mrs. Jacques Heath (Lily May Peel)</td>\n",
-       "      <td>female</td>\n",
-       "      <td>35.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>113803</td>\n",
-       "      <td>53.1000</td>\n",
-       "      <td>C123</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>9</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Johnson, Mrs. Oscar W (Elisabeth Vilhelmina Berg)</td>\n",
-       "      <td>female</td>\n",
-       "      <td>27.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>347742</td>\n",
-       "      <td>11.1333</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>10</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Nasser, Mrs. Nicholas (Adele Achem)</td>\n",
-       "      <td>female</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>237736</td>\n",
-       "      <td>30.0708</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>C</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>880</th>\n",
-       "      <td>881</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Shelley, Mrs. William (Imanita Parrish Hall)</td>\n",
-       "      <td>female</td>\n",
-       "      <td>25.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>230433</td>\n",
-       "      <td>26.0000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>882</th>\n",
-       "      <td>883</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Dahlberg, Miss. Gerda Ulrika</td>\n",
-       "      <td>female</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>7552</td>\n",
-       "      <td>10.5167</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>885</th>\n",
-       "      <td>886</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Rice, Mrs. William (Margaret Norton)</td>\n",
-       "      <td>female</td>\n",
-       "      <td>39.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5</td>\n",
-       "      <td>382652</td>\n",
-       "      <td>29.1250</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Q</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>887</th>\n",
-       "      <td>888</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Graham, Miss. Margaret Edith</td>\n",
-       "      <td>female</td>\n",
-       "      <td>19.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>112053</td>\n",
-       "      <td>30.0000</td>\n",
-       "      <td>B42</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>888</th>\n",
-       "      <td>889</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Johnston, Miss. Catherine Helen \"Carrie\"</td>\n",
-       "      <td>female</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>W./C. 6607</td>\n",
-       "      <td>23.4500</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>314 rows × 12 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     PassengerId  Survived  Pclass  \\\n",
-       "1              2         1       1   \n",
-       "2              3         1       3   \n",
-       "3              4         1       1   \n",
-       "8              9         1       3   \n",
-       "9             10         1       2   \n",
-       "..           ...       ...     ...   \n",
-       "880          881         1       2   \n",
-       "882          883         0       3   \n",
-       "885          886         0       3   \n",
-       "887          888         1       1   \n",
-       "888          889         0       3   \n",
-       "\n",
-       "                                                  Name     Sex   Age  SibSp  \\\n",
-       "1    Cumings, Mrs. John Bradley (Florence Briggs Th...  female  38.0      1   \n",
-       "2                               Heikkinen, Miss. Laina  female  26.0      0   \n",
-       "3         Futrelle, Mrs. Jacques Heath (Lily May Peel)  female  35.0      1   \n",
-       "8    Johnson, Mrs. Oscar W (Elisabeth Vilhelmina Berg)  female  27.0      0   \n",
-       "9                  Nasser, Mrs. Nicholas (Adele Achem)  female  14.0      1   \n",
-       "..                                                 ...     ...   ...    ...   \n",
-       "880       Shelley, Mrs. William (Imanita Parrish Hall)  female  25.0      0   \n",
-       "882                       Dahlberg, Miss. Gerda Ulrika  female  22.0      0   \n",
-       "885               Rice, Mrs. William (Margaret Norton)  female  39.0      0   \n",
-       "887                       Graham, Miss. Margaret Edith  female  19.0      0   \n",
-       "888           Johnston, Miss. Catherine Helen \"Carrie\"  female   NaN      1   \n",
-       "\n",
-       "     Parch            Ticket     Fare Cabin Embarked  \n",
-       "1        0          PC 17599  71.2833   C85        C  \n",
-       "2        0  STON/O2. 3101282   7.9250   NaN        S  \n",
-       "3        0            113803  53.1000  C123        S  \n",
-       "8        2            347742  11.1333   NaN        S  \n",
-       "9        0            237736  30.0708   NaN        C  \n",
-       "..     ...               ...      ...   ...      ...  \n",
-       "880      1            230433  26.0000   NaN        S  \n",
-       "882      0              7552  10.5167   NaN        S  \n",
-       "885      5            382652  29.1250   NaN        Q  \n",
-       "887      0            112053  30.0000   B42        S  \n",
-       "888      2        W./C. 6607  23.4500   NaN        S  \n",
-       "\n",
-       "[314 rows x 12 columns]"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "- La edad promedio de las mujeres que viajaban en primera clase era 34.61\n",
+      "- La edad promedio de las mujeres que viajaban en segunda clase era 28.72\n",
+      "- La edad promedio de las mujeres que viajaban en tercera clase era 21.75\n"
+     ]
     }
    ],
    "source": [
     "df_titanic_female = df_titanic[df_titanic['Sex'] == 'female']\n",
-    "df_titanic_female\n",
+    "total_mujeres = df_titanic_female.shape[0]\n",
     "\n",
-    "clase1_female_age = df_titanic[df_titanic.Pclass == 1]['Age'].sum()\n",
-    "#clase2_survived = df_titanic[df_titanic.Pclass == 2]['Survived'].sum()\n",
-    "#clase3_survived = df_titanic[df_titanic.Pclass ==  3]['Survived'].sum()\n",
+    "cantidad_mujeres_1_clase = df_titanic_female[df_titanic_female.Pclass == 1]['Age'].count()\n",
+    "suma_años_mujeres_1_clase = df_titanic_female[df_titanic_female.Pclass == 1]['Age'].sum()\n",
     "\n",
-    "print(clase1_female_age)\n"
+    "cantidad_mujeres_2_clase = df_titanic_female[df_titanic_female.Pclass == 2]['Age'].count()\n",
+    "suma_años_mujeres_2_clase = df_titanic_female[df_titanic_female.Pclass == 2]['Age'].sum()\n",
+    "\n",
+    "cantidad_mujeres_3_clase = df_titanic_female[df_titanic_female.Pclass == 3]['Age'].count()\n",
+    "suma_años_mujeres_3_clase = df_titanic_female[df_titanic_female.Pclass == 3]['Age'].sum()\n",
+    "\n",
+    "promedio_edad_mujeres_1_clase =  round((suma_años_mujeres_1_clase / cantidad_mujeres_1_clase), 2)\n",
+    "promedio_edad_mujeres_2_clase =  round((suma_años_mujeres_2_clase / cantidad_mujeres_2_clase), 2)\n",
+    "promedio_edad_mujeres_3_clase =  round((suma_años_mujeres_3_clase / cantidad_mujeres_3_clase), 2)\n",
+    "\n",
+    "print(f'- La edad promedio de las mujeres que viajaban en primera clase era {promedio_edad_mujeres_1_clase}')\n",
+    "print(f'- La edad promedio de las mujeres que viajaban en segunda clase era {promedio_edad_mujeres_2_clase}')\n",
+    "print(f'- La edad promedio de las mujeres que viajaban en tercera clase era {promedio_edad_mujeres_3_clase}')\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4c7fe58",
+   "id": "0ca8d02b",
    "metadata": {},
    "outputs": [],
    "source": []
