--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -349,7 +349,23 @@
    "id": "402c1bb2-dd40-4ecc-a045-3319c86ed7b1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_titanic_menor_edad_died = df_titanic[(df_titanic['Menor de Edad'] == True) & (df_titanic['Survived'] == 0)]\n",
+    "df_titanic_mayor_edad_died = df_titanic[(df_titanic['Menor de Edad'] == False) & (df_titanic['Survived'] == 0)]\n",
+    "\n",
+    "\n",
+    "df_menor_edad_1_clase_died = df_titanic_menor_edad_died[df_titanic_menor_edad_died.Pclass == 1]['PassengerId'].count()\n",
+    "df_menor_edad_2_clase_died = df_titanic_menor_edad_died[df_titanic_menor_edad_died.Pclass == 2]['PassengerId'].count()\n",
+    "df_menor_edad_3_clase_died = df_titanic_menor_edad_died[df_titanic_menor_edad_died.Pclass == 3]['PassengerId'].count()\n",
+    "\n",
+    "menores_Edad_murieron = [df_menor_edad_1_clase_died, df_menor_edad_2_clase_died, df_menor_edad_3_clase_died]\n",
+    "\n",
+    "df_mayor_edad_1_clase_died = df_titanic_mayor_edad_died[df_titanic_mayor_edad_died.Pclass == 1]['PassengerId'].count()\n",
+    "df_mayor_edad_2_clase_died = df_titanic_mayor_edad_died[df_titanic_mayor_edad_died.Pclass == 2]['PassengerId'].count()\n",
+    "df_mayor_edad_3_clase_died = df_titanic_mayor_edad_died[df_titanic_mayor_edad_died.Pclass == 3]['PassengerId'].count()\n",
+    "\n",
+    "mayores_edad_murieron = [df_mayor_edad_1_clase_died, df_mayor_edad_2_clase_died, df_mayor_edad_2_clase_died]"
+   ]
   }
  ],
  "metadata": {
