--- a/Modulo2_Actividad5.ipynb
+++ b/Modulo2_Actividad5.ipynb
@@ -808,6 +808,7 @@
     "\n",
     "df_ventas_por_trimestre\n",
     "\n",
+    "'''Debo mejorar el código para que solo fillna() a la columna comuna'''\n",
     "\n",
     "# Crear multi-índices para representar la información por año, trimestre, producto y región\n",
     "#df_unido.set_index(['year', 'quarter', 'producto', 'comuna'], inplace=True)\n",
