--- a/Modulo2_Actividad5.ipynb
+++ b/Modulo2_Actividad5.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,97 +67,226 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "    cantidad          producto           comuna     telefono  \\\n",
-      "0          3             Arroz         Santiago  912345678.0   \n",
-      "1          6             Arroz         Santiago  912345678.0   \n",
-      "2          6  Aceite de cocina         Santiago  912345678.0   \n",
-      "3          2            Azúcar         Santiago  912345678.0   \n",
-      "4          2            Harina         Santiago  912345678.0   \n",
-      "5          1             Leche         Santiago  912345678.0   \n",
-      "6          6             Arroz  Sin Informacion          NaN   \n",
-      "7          2            Harina  Sin Informacion          NaN   \n",
-      "8          9             Arroz  Sin Informacion  923478965.0   \n",
-      "9          5  Aceite de cocina  Sin Informacion  923478965.0   \n",
-      "10         2            Fideos  Sin Informacion  923478965.0   \n",
-      "11         8             Yogur  Sin Informacion  923478965.0   \n",
-      "12         3            Azúcar     Puerto Montt          NaN   \n",
-      "13         1             Leche     Puerto Montt          NaN   \n",
-      "14         7            Azúcar          Iquique  955678902.0   \n",
-      "15         3            Harina          Iquique  955678902.0   \n",
-      "16         3      Agua mineral          Iquique  955678902.0   \n",
-      "17         1          Verduras          Iquique  955678902.0   \n",
-      "18         5            Fideos       Concepción  987654321.0   \n",
-      "19         1            Harina       Concepción  987654321.0   \n",
-      "20         5            Fideos      Antofagasta  945678321.0   \n",
-      "21         1            Harina      Antofagasta  945678321.0   \n",
-      "22         4              Café      Antofagasta  945678321.0   \n",
-      "23         4           Pescado      Antofagasta  945678321.0   \n",
-      "24         4            Helado      Antofagasta  945678321.0   \n",
-      "25         7          Galletas      Antofagasta  945678321.0   \n",
-      "26         8              Café       Valparaíso  912345678.0   \n",
-      "27         4       Mantequilla       Valparaíso  912345678.0   \n",
-      "28        10          Verduras       Valparaíso  912345678.0   \n",
-      "29        20           Pescado       Valparaíso  912345678.0   \n",
-      "30         1              Café  Sin Informacion  912345672.0   \n",
-      "31         6    Carne de pollo  Sin Informacion  912345672.0   \n",
-      "32         7             Yogur  Sin Informacion  934567890.0   \n",
-      "33         3      Agua mineral        La Serena          NaN   \n",
-      "34         2    Frutas frescas  Sin Informacion  978901234.0   \n",
-      "35         5          Verduras         Rancagua          NaN   \n",
-      "36         9           Pescado         Rancagua          NaN   \n",
-      "37         4            Helado           Temuco  923456789.0   \n",
-      "38         2            Helado     Viña del Mar  967894512.0   \n",
-      "39         5             Queso     Viña del Mar  967894512.0   \n",
-      "\n",
-      "                    email  anio  trimestre  \n",
-      "0        juan@example.com  2023          4  \n",
-      "1        juan@example.com  2023          4  \n",
-      "2        juan@example.com  2023          4  \n",
-      "3        juan@example.com  2023          4  \n",
-      "4        juan@example.com  2023          4  \n",
-      "5        juan@example.com  2023          4  \n",
-      "6                     NaN  2023          4  \n",
-      "7                     NaN  2023          4  \n",
-      "8   valentina@example.com  2023          4  \n",
-      "9   valentina@example.com  2023          4  \n",
-      "10  valentina@example.com  2023          4  \n",
-      "11  valentina@example.com  2023          4  \n",
-      "12                    NaN  2023          4  \n",
-      "13                    NaN  2023          4  \n",
-      "14     martin@example.com  2023          4  \n",
-      "15     martin@example.com  2023          4  \n",
-      "16     martin@example.com  2023          4  \n",
-      "17     martin@example.com  2023          4  \n",
-      "18      maria@example.com  2023          4  \n",
-      "19      maria@example.com  2023          4  \n",
-      "20      laura@example.com  2023          4  \n",
-      "21      laura@example.com  2023          4  \n",
-      "22      laura@example.com  2023          4  \n",
-      "23      laura@example.com  2023          4  \n",
-      "24      laura@example.com  2023          4  \n",
-      "25      laura@example.com  2023          4  \n",
-      "26      pedro@example.com  2023          4  \n",
-      "27      pedro@example.com  2023          4  \n",
-      "28      pedro@example.com  2023          4  \n",
-      "29      pedro@example.com  2023          4  \n",
-      "30      sofia@example.com  2023          4  \n",
-      "31      sofia@example.com  2023          4  \n",
-      "32      carla@example.com  2023          4  \n",
-      "33      diego@example.com  2023          4  \n",
-      "34        ana@example.com  2023          4  \n",
-      "35      luisa@example.com  2023          4  \n",
-      "36      luisa@example.com  2023          4  \n",
-      "37                    NaN  2023          4  \n",
-      "38      mateo@example.com  2023          4  \n",
-      "39      mateo@example.com  2023          4  \n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th>producto</th>\n",
+       "      <th>comuna</th>\n",
+       "      <th>cantidad</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">Aceite de cocina</th>\n",
+       "      <th>Santiago</th>\n",
+       "      <th>6</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Sin Informacion</th>\n",
+       "      <th>5</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">Agua mineral</th>\n",
+       "      <th>Iquique</th>\n",
+       "      <th>3</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>La Serena</th>\n",
+       "      <th>3</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"4\" valign=\"top\">Arroz</th>\n",
+       "      <th rowspan=\"2\" valign=\"top\">Santiago</th>\n",
+       "      <th>3</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">Sin Informacion</th>\n",
+       "      <th>6</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"3\" valign=\"top\">Azúcar</th>\n",
+       "      <th>Iquique</th>\n",
+       "      <th>7</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Puerto Montt</th>\n",
+       "      <th>3</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Santiago</th>\n",
+       "      <th>2</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"3\" valign=\"top\">Café</th>\n",
+       "      <th>Antofagasta</th>\n",
+       "      <th>4</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Sin Informacion</th>\n",
+       "      <th>1</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Valparaíso</th>\n",
+       "      <th>8</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Carne de pollo</th>\n",
+       "      <th>Sin Informacion</th>\n",
+       "      <th>6</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"3\" valign=\"top\">Fideos</th>\n",
+       "      <th>Antofagasta</th>\n",
+       "      <th>5</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Concepción</th>\n",
+       "      <th>5</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Sin Informacion</th>\n",
+       "      <th>2</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Frutas frescas</th>\n",
+       "      <th>Sin Informacion</th>\n",
+       "      <th>2</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Galletas</th>\n",
+       "      <th>Antofagasta</th>\n",
+       "      <th>7</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">Harina</th>\n",
+       "      <th>Antofagasta</th>\n",
+       "      <th>1</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Concepción</th>\n",
+       "      <th>1</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Iquique</th>\n",
+       "      <th>3</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Santiago</th>\n",
+       "      <th>2</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Sin Informacion</th>\n",
+       "      <th>2</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"3\" valign=\"top\">Helado</th>\n",
+       "      <th>Antofagasta</th>\n",
+       "      <th>4</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Temuco</th>\n",
+       "      <th>4</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Viña del Mar</th>\n",
+       "      <th>2</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">Leche</th>\n",
+       "      <th>Puerto Montt</th>\n",
+       "      <th>1</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Santiago</th>\n",
+       "      <th>1</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Mantequilla</th>\n",
+       "      <th>Valparaíso</th>\n",
+       "      <th>4</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"3\" valign=\"top\">Pescado</th>\n",
+       "      <th>Antofagasta</th>\n",
+       "      <th>4</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Rancagua</th>\n",
+       "      <th>9</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Valparaíso</th>\n",
+       "      <th>20</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Queso</th>\n",
+       "      <th>Viña del Mar</th>\n",
+       "      <th>5</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"3\" valign=\"top\">Verduras</th>\n",
+       "      <th>Iquique</th>\n",
+       "      <th>1</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Rancagua</th>\n",
+       "      <th>5</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Valparaíso</th>\n",
+       "      <th>10</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">Yogur</th>\n",
+       "      <th rowspan=\"2\" valign=\"top\">Sin Informacion</th>\n",
+       "      <th>7</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: []\n",
+       "Index: [(Aceite de cocina, Santiago, 6), (Aceite de cocina, Sin Informacion, 5), (Agua mineral, Iquique, 3), (Agua mineral, La Serena, 3), (Arroz, Santiago, 3), (Arroz, Santiago, 6), (Arroz, Sin Informacion, 6), (Arroz, Sin Informacion, 9), (Azúcar, Iquique, 7), (Azúcar, Puerto Montt, 3), (Azúcar, Santiago, 2), (Café, Antofagasta, 4), (Café, Sin Informacion, 1), (Café, Valparaíso, 8), (Carne de pollo, Sin Informacion, 6), (Fideos, Antofagasta, 5), (Fideos, Concepción, 5), (Fideos, Sin Informacion, 2), (Frutas frescas, Sin Informacion, 2), (Galletas, Antofagasta, 7), (Harina, Antofagasta, 1), (Harina, Concepción, 1), (Harina, Iquique, 3), (Harina, Santiago, 2), (Harina, Sin Informacion, 2), (Helado, Antofagasta, 4), (Helado, Temuco, 4), (Helado, Viña del Mar, 2), (Leche, Puerto Montt, 1), (Leche, Santiago, 1), (Mantequilla, Valparaíso, 4), (Pescado, Antofagasta, 4), (Pescado, Rancagua, 9), (Pescado, Valparaíso, 20), (Queso, Viña del Mar, 5), (Verduras, Iquique, 1), (Verduras, Rancagua, 5), (Verduras, Valparaíso, 10), (Yogur, Sin Informacion, 7), (Yogur, Sin Informacion, 8)]"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -174,15 +303,21 @@
     "df_todos['trimestre'] = df_todos['fecha'].dt.quarter\n",
     "\n",
     "df_todos.drop(['numero', 'fecha', 'rut_cliente', 'numero_boleta', 'codigo_producto', 'codigo', 'precio', 'rut', 'nombre',\n",
-    "               'direccion', 'fecha_nacimiento'], axis=1, inplace=True) # Aca está la línea\n",
+    "               'direccion', 'fecha_nacimiento', 'telefono', 'email'], axis=1, inplace=True)\n",
     "\n",
     "ventas_por_producto = df_todos.groupby('producto')['cantidad'].sum().reset_index()\n",
-    "ventas_por_producto.rename(columns={'cantidad': 'Total Ventas por Producto'}, inplace=True)\n",
+    "#ventas_por_producto.rename(columns={'cantidad': 'Total Ventas por Producto'}, inplace=True)\n",
     "\n",
-    "#df_unido = pd.merge(df_unido, total_ventas_por_producto, on='producto')\n",
+    "productoXregion = df_todos.pivot_table(index=['producto', 'comuna'], columns=['anio', 'trimestre'], values='cantidad',\n",
+    "                                          aggfunc='sum', fill_value=0)\n",
     "\n",
-    "#print(ventas_por_producto)\n",
-    "print(df_todos)\n"
+    "df_productoXregion = pd.DataFrame(productoXregion)\n",
+    "\n",
+    "#ventas_totales = ventas_por_producto.set_index('producto')['cantidad']\n",
+    "#df_productoXregion.loc[('Total Ventas', 'Total')] = ventas_totales\n",
+    "\n",
+    "df_productoXregion\n",
+    "\n"
    ]
   },
   {
@@ -190,18 +325,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "\n",
-    "ventas_por_trimestre = df_unido.pivot_table(index=['producto', 'comuna'], columns=['year', 'quarter'], values='cantidad',\n",
-    "                                            aggfunc='sum', fill_value=0)\n",
-    "\n",
-    "df_ventas_por_trimestre = pd.DataFrame(ventas_por_trimestre)\n",
-    "\n",
-    "# Agregar la columna 'Total Ventas' a la tabla pivote\n",
-    "ventas_por_trimestre['Total Ventas por Producto'] = total_ventas_por_producto.set_index('producto')['Total Ventas por Producto']"
-   ]
+   "source": []
   }
  ],
  "metadata": {
